# freeswitch

./: .drone.yml
src/: switch_core_media.c
src/include/: switch_core_media.h  switch_types.h
src/mod/applications/mod_spandsp/: mod_spandsp.c  mod_spandsp.h  mod_spandsp_dsp.c  mod_spandsp_v150.c
src/mod/applications/mod_v150/: mod_v150.c  mod_v150.h  mod_v150_codecs.c  sprt_wrapper.c  udptl.c
src/mod/endpoints/mod_sofia/: mod_sofia.c
src/mod/endpoints/mod_v150_sprt/: Makefile.am  mod_v150_sprt.c
src/mod/endpoints/mod_v150_sprt/conf/autoload_configs/: v150_sprt.conf.xml
